examples/test/testpolicy7898.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7898
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key45: value3
      key30: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value23
          key1: value7
      podSelector:
        matchLabels:
          key13: value4
